moved filter by polygon function + coord system verifification

--- a/Documentation/Optimisation_Changes/Journal of improvements.ipynb
+++ b/Documentation/Optimisation_Changes/Journal of improvements.ipynb
@@ -897,8 +897,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-11T09:57:41.519377Z",
-     "start_time": "2025-03-11T09:57:41.177036Z"
+     "end_time": "2025-03-28T10:08:57.309845Z",
+     "start_time": "2025-03-28T10:08:57.294243Z"
     }
    },
    "cell_type": "code",
@@ -906,12 +906,12 @@
     "import geopandas as gpd\n",
     "\n",
     "# Load the GPKG file\n",
-    "file_path =  \"/run/media/mak/OS/example_data_week8/20241029_products_uav_data/20241204_oncerco_plot_polygons.gpkg\"\n",
+    "file_path =  \"2024_oncerco_plot_polygons.gpkg\"\n",
     "gdf = gpd.read_file(file_path)\n",
     "\n",
     "# Display the first few rows\n",
     "print(gdf.head())\n",
-    "print(gdf.crs)"
+    "print(str(gdf.crs))"
    ],
    "id": "e620daf338047f28",
    "outputs": [
@@ -927,29 +927,22 @@
       "4  capone   90020  trt  False   \n",
       "\n",
       "                                            geometry  \n",
-      "0  POLYGON ((563629.94384 5713009.6478, 563630.38...  \n",
-      "1  POLYGON ((563630.38403 5713012.31167, 563630.8...  \n",
-      "2  POLYGON ((563630.82421 5713014.97555, 563631.2...  \n",
-      "3  POLYGON ((563631.2644 5713017.63943, 563631.70...  \n",
-      "4  POLYGON ((563631.70458 5713020.3033, 563632.14...  \n",
+      "0  POLYGON ((9.918 51.56458, 9.918 51.5646, 9.917...  \n",
+      "1  POLYGON ((9.918 51.5646, 9.91801 51.56463, 9.9...  \n",
+      "2  POLYGON ((9.91801 51.56463, 9.91802 51.56465, ...  \n",
+      "3  POLYGON ((9.91802 51.56465, 9.91802 51.56467, ...  \n",
+      "4  POLYGON ((9.91802 51.56467, 9.91803 51.5647, 9...  \n",
       "EPSG:4326\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /home/mak/.conda/envs/UAV-2/share/proj failed\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-11T09:57:41.545408Z",
-     "start_time": "2025-03-11T09:57:41.535218Z"
+     "end_time": "2025-03-28T09:54:48.906018Z",
+     "start_time": "2025-03-28T09:54:48.888946Z"
     }
    },
    "cell_type": "code",
@@ -986,30 +979,30 @@
        "23   aluco   90001  no_trt   True   \n",
        "\n",
        "                                             geometry  \n",
-       "0   POLYGON ((563629.94384 5713009.6478, 563630.38...  \n",
-       "1   POLYGON ((563630.38403 5713012.31167, 563630.8...  \n",
-       "2   POLYGON ((563630.82421 5713014.97555, 563631.2...  \n",
-       "3   POLYGON ((563631.2644 5713017.63943, 563631.70...  \n",
-       "4   POLYGON ((563631.70458 5713020.3033, 563632.14...  \n",
-       "5   POLYGON ((563632.14477 5713022.96718, 563632.5...  \n",
-       "6   POLYGON ((563632.58495 5713025.63106, 563633.0...  \n",
-       "7   POLYGON ((563633.02514 5713028.29493, 563633.4...  \n",
-       "8   POLYGON ((563633.46532 5713030.95881, 563633.9...  \n",
-       "9   POLYGON ((563633.9055 5713033.62269, 563634.34...  \n",
-       "10  POLYGON ((563634.34569 5713036.28656, 563634.7...  \n",
-       "11  POLYGON ((563634.78587 5713038.95044, 563635.2...  \n",
-       "12  POLYGON ((563608.22406 5713013.14795, 563608.6...  \n",
-       "13  POLYGON ((563608.66425 5713015.81183, 563609.1...  \n",
-       "14  POLYGON ((563609.10443 5713018.4757, 563609.54...  \n",
-       "15  POLYGON ((563609.54462 5713021.13958, 563609.9...  \n",
-       "16  POLYGON ((563609.9848 5713023.80345, 563610.42...  \n",
-       "17  POLYGON ((563610.42498 5713026.46733, 563610.8...  \n",
-       "18  POLYGON ((563610.86517 5713029.13121, 563611.3...  \n",
-       "19  POLYGON ((563611.30535 5713031.79508, 563611.7...  \n",
-       "20  POLYGON ((563611.74554 5713034.45896, 563612.1...  \n",
-       "21  POLYGON ((563612.18572 5713037.12284, 563612.6...  \n",
-       "22  POLYGON ((563612.62591 5713039.78671, 563613.0...  \n",
-       "23  POLYGON ((563613.06609 5713042.45059, 563613.5...  "
+       "0   POLYGON ((9.918 51.56458, 9.918 51.5646, 9.917...  \n",
+       "1   POLYGON ((9.918 51.5646, 9.91801 51.56463, 9.9...  \n",
+       "2   POLYGON ((9.91801 51.56463, 9.91802 51.56465, ...  \n",
+       "3   POLYGON ((9.91802 51.56465, 9.91802 51.56467, ...  \n",
+       "4   POLYGON ((9.91802 51.56467, 9.91803 51.5647, 9...  \n",
+       "5   POLYGON ((9.91803 51.5647, 9.91804 51.56472, 9...  \n",
+       "6   POLYGON ((9.91804 51.56472, 9.91804 51.56474, ...  \n",
+       "7   POLYGON ((9.91804 51.56474, 9.91805 51.56477, ...  \n",
+       "8   POLYGON ((9.91805 51.56477, 9.91806 51.56479, ...  \n",
+       "9   POLYGON ((9.91806 51.56479, 9.91806 51.56482, ...  \n",
+       "10  POLYGON ((9.91806 51.56482, 9.91807 51.56484, ...  \n",
+       "11  POLYGON ((9.91807 51.56484, 9.91808 51.56486, ...  \n",
+       "12  POLYGON ((9.91768 51.56461, 9.91769 51.56464, ...  \n",
+       "13  POLYGON ((9.91769 51.56464, 9.9177 51.56466, 9...  \n",
+       "14  POLYGON ((9.9177 51.56466, 9.9177 51.56468, 9....  \n",
+       "15  POLYGON ((9.9177 51.56468, 9.91771 51.56471, 9...  \n",
+       "16  POLYGON ((9.91771 51.56471, 9.91772 51.56473, ...  \n",
+       "17  POLYGON ((9.91772 51.56473, 9.91772 51.56475, ...  \n",
+       "18  POLYGON ((9.91772 51.56475, 9.91773 51.56478, ...  \n",
+       "19  POLYGON ((9.91773 51.56478, 9.91774 51.5648, 9...  \n",
+       "20  POLYGON ((9.91774 51.5648, 9.91774 51.56483, 9...  \n",
+       "21  POLYGON ((9.91774 51.56483, 9.91775 51.56485, ...  \n",
+       "22  POLYGON ((9.91775 51.56485, 9.91776 51.56487, ...  \n",
+       "23  POLYGON ((9.91776 51.56487, 9.91776 51.5649, 9...  "
       ],
       "text/html": [
        "<div>\n",
@@ -1044,7 +1037,7 @@
        "      <td>90024</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563629.94384 5713009.6478, 563630.38...</td>\n",
+       "      <td>POLYGON ((9.918 51.56458, 9.918 51.5646, 9.917...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1052,7 +1045,7 @@
        "      <td>90023</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563630.38403 5713012.31167, 563630.8...</td>\n",
+       "      <td>POLYGON ((9.918 51.5646, 9.91801 51.56463, 9.9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1060,7 +1053,7 @@
        "      <td>90022</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563630.82421 5713014.97555, 563631.2...</td>\n",
+       "      <td>POLYGON ((9.91801 51.56463, 9.91802 51.56465, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1068,7 +1061,7 @@
        "      <td>90021</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563631.2644 5713017.63943, 563631.70...</td>\n",
+       "      <td>POLYGON ((9.91802 51.56465, 9.91802 51.56467, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1076,7 +1069,7 @@
        "      <td>90020</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563631.70458 5713020.3033, 563632.14...</td>\n",
+       "      <td>POLYGON ((9.91802 51.56467, 9.91803 51.5647, 9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1084,7 +1077,7 @@
        "      <td>90019</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563632.14477 5713022.96718, 563632.5...</td>\n",
+       "      <td>POLYGON ((9.91803 51.5647, 9.91804 51.56472, 9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1092,7 +1085,7 @@
        "      <td>90018</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563632.58495 5713025.63106, 563633.0...</td>\n",
+       "      <td>POLYGON ((9.91804 51.56472, 9.91804 51.56474, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1100,7 +1093,7 @@
        "      <td>90017</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563633.02514 5713028.29493, 563633.4...</td>\n",
+       "      <td>POLYGON ((9.91804 51.56474, 9.91805 51.56477, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1108,7 +1101,7 @@
        "      <td>90016</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563633.46532 5713030.95881, 563633.9...</td>\n",
+       "      <td>POLYGON ((9.91805 51.56477, 9.91806 51.56479, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1116,7 +1109,7 @@
        "      <td>90015</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563633.9055 5713033.62269, 563634.34...</td>\n",
+       "      <td>POLYGON ((9.91806 51.56479, 9.91806 51.56482, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -1124,7 +1117,7 @@
        "      <td>90014</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563634.34569 5713036.28656, 563634.7...</td>\n",
+       "      <td>POLYGON ((9.91806 51.56482, 9.91807 51.56484, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -1132,7 +1125,7 @@
        "      <td>90013</td>\n",
        "      <td>trt</td>\n",
        "      <td>False</td>\n",
-       "      <td>POLYGON ((563634.78587 5713038.95044, 563635.2...</td>\n",
+       "      <td>POLYGON ((9.91807 51.56484, 9.91808 51.56486, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -1140,7 +1133,7 @@
        "      <td>90012</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563608.22406 5713013.14795, 563608.6...</td>\n",
+       "      <td>POLYGON ((9.91768 51.56461, 9.91769 51.56464, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1148,7 +1141,7 @@
        "      <td>90011</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563608.66425 5713015.81183, 563609.1...</td>\n",
+       "      <td>POLYGON ((9.91769 51.56464, 9.9177 51.56466, 9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -1156,7 +1149,7 @@
        "      <td>90010</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563609.10443 5713018.4757, 563609.54...</td>\n",
+       "      <td>POLYGON ((9.9177 51.56466, 9.9177 51.56468, 9....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -1164,7 +1157,7 @@
        "      <td>90009</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563609.54462 5713021.13958, 563609.9...</td>\n",
+       "      <td>POLYGON ((9.9177 51.56468, 9.91771 51.56471, 9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1172,7 +1165,7 @@
        "      <td>90008</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563609.9848 5713023.80345, 563610.42...</td>\n",
+       "      <td>POLYGON ((9.91771 51.56471, 9.91772 51.56473, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -1180,7 +1173,7 @@
        "      <td>90007</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563610.42498 5713026.46733, 563610.8...</td>\n",
+       "      <td>POLYGON ((9.91772 51.56473, 9.91772 51.56475, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -1188,7 +1181,7 @@
        "      <td>90006</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563610.86517 5713029.13121, 563611.3...</td>\n",
+       "      <td>POLYGON ((9.91772 51.56475, 9.91773 51.56478, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -1196,7 +1189,7 @@
        "      <td>90005</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563611.30535 5713031.79508, 563611.7...</td>\n",
+       "      <td>POLYGON ((9.91773 51.56478, 9.91774 51.5648, 9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -1204,7 +1197,7 @@
        "      <td>90004</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563611.74554 5713034.45896, 563612.1...</td>\n",
+       "      <td>POLYGON ((9.91774 51.5648, 9.91774 51.56483, 9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -1212,7 +1205,7 @@
        "      <td>90003</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563612.18572 5713037.12284, 563612.6...</td>\n",
+       "      <td>POLYGON ((9.91774 51.56483, 9.91775 51.56485, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -1220,7 +1213,7 @@
        "      <td>90002</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563612.62591 5713039.78671, 563613.0...</td>\n",
+       "      <td>POLYGON ((9.91775 51.56485, 9.91776 51.56487, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -1228,19 +1221,19 @@
        "      <td>90001</td>\n",
        "      <td>no_trt</td>\n",
        "      <td>True</td>\n",
-       "      <td>POLYGON ((563613.06609 5713042.45059, 563613.5...</td>\n",
+       "      <td>POLYGON ((9.91776 51.56487, 9.91776 51.5649, 9...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -1250,7 +1243,7 @@
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "-",
    "id": "d5d2e073e82add31",
    "outputs": [],
    "execution_count": null
